@@ -1,0 +1,5 @@
+.installed.cfg
+bin/
+develop-eggs/
+isotoma.recipe.zope2install.egg-info/
+*.pyc
