@@ -17,3 +17,6 @@ defaults = ['-s', 'isotoma.recipe.zope2install']
 
 [versions]
 zc.buildout = 1.4.3
+zc.recipe.testrunner = 1.3.0
+zc.recipe.egg = 1.2.3b2
+
