@@ -6,3 +6,5 @@ Change History
 
 - Initial version (fork of plone.recipe.zope2install 3.3).
 
+- Download now uses zc.buildout.download.Download() api
+
